--- a/src/app/views/note/note.component.html
+++ b/src/app/views/note/note.component.html
@@ -1,1 +1,15 @@
-<p>note works!</p>
+<div class="hero-conteiner">
+    <nav>
+        <div class="hero-title" routerLink="/notepad"> Create Notes</div>
+        <div class="options">
+            <div class="create-note" >Save Note</div>
+            <div class="logout" routerLink="/notepad" (click)="endNote()" >Back</div>
+        </div>
+    </nav>
+    <div class="hero-body">
+        <div class="paper">
+            <input type="text" placeholder="Untiled" class="note-title" [(ngModel)]="title">
+            <textarea cols="30" rows="10"  class="note-body" [(ngModel)]="message"></textarea>
+        </div>
+    </div>
+</div>
