--- a/src/app/views/notepad/notepad.component.scss
+++ b/src/app/views/notepad/notepad.component.scss
@@ -24,3 +24,29 @@
     text-decoration: underline;
     color: #bdecb6;
 }
+
+.hero-body-note{
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: fixed;
+    bottom: 0px;
+}
+
+.note-body{
+    width: 70%;
+    height: 50px;
+    margin: 5px;
+    transition: all 1s;
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+    border: 1px solid #fff;
+    cursor: pointer;
+}
+
+.note-body:hover{
+    border: 1px solid #ababab;
+}
