--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,10 +121,9 @@ textarea{
         margin-left: 35px;
     }
     .options{
-        right: 30px;
+        right: 30px !important;
     }
     .paper{
-        width: 85%;
-        height: 80%;
+        width: 85% !important;
     }
 }
