--- a/src/app/views/note/note.component.html
+++ b/src/app/views/note/note.component.html
@@ -1,6 +1,6 @@
 <div class="hero-conteiner">
     <nav>
-        <div class="hero-title" routerLink="/notepad"># Notes</div>
+        <div class="hero-title" routerLink="/notepad"> Create Notes</div>
         <div class="options">
             <div class="create-note" >Save Note</div>
             <div class="logout" routerLink="/notepad" (click)="endNote()" >Back</div>
